Add xvfb to Build-Depends.

--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 9),
                gtk-doc-tools,
                libnunit-cil-dev,
                dbus-test-runner,
+               xvfb,
                cli-common-dev (>= 0.5.7),
                mono-devel (>= 2.4.3),
                gtk-sharp2-gapi,
