--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,7 @@ CFLAGS += -fPIC
 
 # Note: No cli here so that the pbuilder stuff works
 override_dh_clean:
-	dh clean --with autoreconf,python2,gir
+	dh_clean
 
 override_dh_autoreconf:
 	NOCONFIGURE=1 dh_autoreconf ./autogen.sh
