--- a/debian/rules
+++ b/debian/rules
@@ -72,14 +72,21 @@ override_dh_install:
 override_dh_auto_test: $(FLAVORS:%=dotest-%)
 
 dotest-%:
-	#dh_auto_test --builddirectory=build/$*
+	#
+	# Not running the gtk-doc tests to check that the documentation is complete...
+	#
+	dh_auto_test --builddirectory=build/$* -- -C tests
+
 
 dotest-gtk2: $(PY_VERSIONS:%=dotestgtk2-%)
 	# GTK2 flavor test was run on a per-python-version basis.
 
 dotestgtk2-%:
-	#PYTHON=`which $*` \
-	#	dh_auto_test --builddirectory=build/gtk2
+	#
+	# Not running the gtk-doc tests to check that the documentation is complete...
+	#
+	PYTHON=`which $*` \
+		dh_auto_test --builddirectory=build/gtk2 -- -C tests
 
 override_dh_auto_clean:
 	dh_auto_clean
