Making sure the check is done in the source directory

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -119,5 +119,15 @@ if ENABLE_GTK_DOC
  TESTS_ENVIRONMENT = cd $(srcdir) && \
    DOC_MODULE=$(DOC_MODULE) DOC_MAIN_SGML_FILE=$(DOC_MAIN_SGML_FILE) \
    SRCDIR=$(abs_srcdir) BUILDDIR=$(abs_builddir)
-TESTS = $(GTKDOC_CHECK)
+
+TESTS = gtkdoc-in-srcdir
+
+gtkdoc-in-srcdir: Makefile.am
+	@echo "#!/bin/sh" > $@
+	@echo "cd \"$(srcdir)\"" >> $@
+	@echo "$(GTKDOC_CHECK)" >> $@
+	@chmod +x $@
+
+DISTCLEANFILES = gtkdoc-in-srcdir
+
 endif
