Don't explicitly build-depend on gir packages, quilt, or gnome-doc-utils Build using default vala Build-depend on libxml2-utils Build-depend on at-spi2-core to avoid test failure Have -dev packages depend on their gir- packages

--- a/debian/control
+++ b/debian/control
@@ -5,17 +5,17 @@ XS-Python-Version: all
 Maintainer: Ubuntu Desktop Team <ubuntu-desktop@lists.ubuntu.com>
 Build-Depends: debhelper (>= 9),
                dh-autoreconf,
-               quilt,
                python-all-dev,
+               at-spi2-core,
                cli-common-dev (>= 0.5.7),
                gobject-introspection,
                intltool,
-               gnome-doc-utils,
                gtk-doc-tools,
+               libxml2-utils,
                libnunit-cil-dev,
                dbus-test-runner,
                xvfb,
-               valac-0.16,
+               valac,
                mono-devel (>= 2.4.3),
                libglib2.0-dev (>= 2.35.4),
                libgtk-3-dev (>= 2.91.3),
@@ -30,9 +30,6 @@ Build-Depends: debhelper (>= 9),
                libdbusmenu-gtk-dev (>= 0.5.90),
                libdbusmenu-gtk3-dev (>= 0.5.90),
                libgirepository1.0-dev,
-               gir1.2-glib-2.0,
-               gir1.2-gtk-2.0,
-               gir1.2-gtk-3.0,
 Standards-Version: 3.9.1
 Homepage: https://launchpad.net/libappindicator
 # If you aren't a member of ~indicator-applet-developers but need to upload
@@ -69,7 +66,7 @@ Description: Application Indicators
  This package contains shared libraries to be used by applications.
 
 Package: gir1.2-appindicator-0.1
-Section: libs
+Section: introspection
 Architecture: any
 Depends: ${misc:Depends},
          ${gir:Depends},
@@ -83,6 +80,7 @@ Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         gir1.2-appindicator-0.1 (= ${binary:Version}),
          libdbusmenu-glib-dev (>= 0.1.8),
          libdbus-glib-1-dev (>= 0.76),
          libappindicator1 (= ${binary:Version}),
@@ -120,6 +118,7 @@ Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         gir1.2-appindicator3-0.1 (= ${binary:Version}),
          libdbusmenu-glib-dev (>= 0.1.8),
          libdbus-glib-1-dev (>= 0.76),
          libappindicator3-1 (= ${binary:Version}),
@@ -130,7 +129,7 @@ Description: Application Indicators
  This package contains files that are needed to build applications.
 
 Package: gir1.2-appindicator3-0.1
-Section: libs
+Section: introspection
 Architecture: any
 Depends: ${misc:Depends},
          ${gir:Depends},
