* Build with -Wno-error=deprecated-declarations. * Don't build the mono bindings on ppc64el, not available. * Disable building the example, vala build error.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,10 @@ ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 SUBDIRS = \
       src		\
 	  bindings	\
-	  example	\
 	  docs
+
+# FIXME: Disabled, vala error
+#	  example	
 
 if WANT_TESTS
 SUBDIRS += tests
