--- a/debian/control
+++ b/debian/control
@@ -7,22 +7,22 @@ Build-Depends: debhelper (>= 9),
                dh-autoreconf,
                python-all-dev,
                at-spi2-core,
-               cli-common-dev (>= 0.5.7) [!arm64],
+               cli-common-dev (>= 0.5.7) [!arm64 !ppc64el],
                gobject-introspection,
                intltool,
                gtk-doc-tools,
                libxml2-utils,
-               libnunit-cil-dev [!arm64],
+               libnunit-cil-dev [!arm64 !ppc64el],
                dbus-test-runner,
                xvfb,
                valac,
-               mono-devel (>= 2.4.3) [!arm64],
+               mono-devel (>= 2.4.3) [!arm64 !ppc64el],
                libglib2.0-dev (>= 2.35.4),
                libgtk-3-dev (>= 2.91.3),
                libgtk2.0-dev (>= 2.12.0),
                python-gtk2-dev,
-               gtk-sharp2-gapi [!arm64],
-               libgtk2.0-cil-dev [!arm64],
+               gtk-sharp2-gapi [!arm64 !ppc64el],
+               libgtk2.0-cil-dev [!arm64 !ppc64el],
                libdbus-glib-1-dev (>= 0.82),
                libindicator-dev (>= 0.3.90),
                libindicator3-dev (>= 0.3.90),
