--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ API_VERSION = 0.1
 DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH)
 
 CONFIGURE_COMMON_FLAGS = --disable-scrollkeeper --enable-introspection
-ifneq (,$(filter $(DEB_HOST_ARCH),arm64))
+ifneq (,$(filter $(DEB_HOST_ARCH),arm64 ppc64el))
   CONFIGURE_COMMON_FLAGS += --disable-mono-test
 else
   dh_extra_args = ,cli
