--- a/bindings/mono/examples/Makefile.am
+++ b/bindings/mono/examples/Makefile.am
@@ -1,10 +1,11 @@
-ASSEMBLY = IndicatorExample.exe
-CSFILES = IndicatorExample.cs
+ASSEMBLY = AyatanaIndicatorExample.exe
+CSFILES = AyatanaIndicatorExample.cs
 CLEANFILES = $(ASSEMBLY)
+DISTCLEANFILES = Makefile.in
 
 EXTRA_DIST = $(CSFILES)
 
-references = $(GTK_SHARP_LIBS) -r:$(top_builddir)/bindings/mono/appindicator-sharp.dll
+references = $(GTK_SHARP_LIBS) -r:$(top_builddir)/bindings/mono/ayatana-appindicator-sharp.dll
 
 $(ASSEMBLY): $(CSFILES) Makefile.am
 	$(CSC) $(CSFLAGS) -out:$(ASSEMBLY) -target:exe $(references) $(srcdir)/$(CSFILES)
