--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,21 +1,21 @@
 if USE_GTK3
 VER=3
-lib_LTLIBRARIES = libappindicator3.la
+lib_LTLIBRARIES = libayatana-appindicator3.la
 GTKGIR = Gtk-3.0
 else
 VER=
-lib_LTLIBRARIES = libappindicator.la
+lib_LTLIBRARIES = libayatana-appindicator.la
 GTKGIR = Gtk-2.0
 endif
 
 CLEANFILES =
-DISTCLEANFILES =
+DISTCLEANFILES = Makefile.in
 BUILT_SOURCES =
 EXTRA_DIST = \
-	appindicator-0.1.pc.in \
-	appindicator3-0.1.pc.in \
-	AppIndicator-0.1.metadata.in \
-	AppIndicator3-0.1.metadata.in
+	ayatana-appindicator-0.1.pc.in \
+	ayatana-appindicator3-0.1.pc.in \
+	AyatanaAppIndicator-0.1.metadata.in \
+	AyatanaAppIndicator3-0.1.metadata.in
 
 include $(top_srcdir)/Makefile.am.enum
 include $(top_srcdir)/Makefile.am.marshal
@@ -35,27 +35,27 @@ glib_marshal_prefix = _application_service_marshal
 # Library
 ##################################
 
-pkgconfig_DATA = appindicator$(VER)-0.1.pc
+pkgconfig_DATA = ayatana-appindicator$(VER)-0.1.pc
 pkgconfigdir = $(libdir)/pkgconfig
 
 glib_enum_h = app-indicator-enum-types.h
 glib_enum_c = app-indicator-enum-types.c
-glib_enum_headers = $(addprefix $(srcdir)/, $(libappindicator_headers))
+glib_enum_headers = $(addprefix $(srcdir)/, $(libayatana_appindicator_headers))
 
 DISTCLEANFILES += app-indicator-enum-types.c
 
-libappindicatorincludefolder=libappindicator
-libappindicatorincludedir=$(includedir)/libappindicator$(VER)-0.1/$(libappindicatorincludefolder)
+libayatana_appindicatorincludefolder=libayatana-appindicator
+libayatana_appindicatorincludedir=$(includedir)/libayatana-appindicator$(VER)-0.1/$(libayatana_appindicatorincludefolder)
 
-libappindicator_headers = \
+libayatana_appindicator_headers = \
 	app-indicator.h
 
-libappindicatorinclude_HEADERS = \
-	$(libappindicator_headers) \
+libayatana_appindicatorinclude_HEADERS = \
+	$(libayatana_appindicator_headers) \
 	$(glib_enum_h)
 
-libappindicator_la_SOURCES = \
-	$(libappindicator_headers) \
+libayatana_appindicator_la_SOURCES = \
+	$(libayatana_appindicator_headers) \
 	app-indicator-enum-types.c \
 	app-indicator.c \
 	application-service-marshal.c \
@@ -67,31 +67,31 @@ libappindicator_la_SOURCES = \
 	gen-notification-watcher.xml.h \
 	gen-notification-watcher.xml.c
 
-libappindicator_la_LDFLAGS = \
+libayatana_appindicator_la_LDFLAGS = \
 	$(COVERAGE_LDFLAGS) \
 	-version-info 1:0:0 \
 	-no-undefined \
 	-export-symbols-regex "^[^_d].*"
 
-libappindicator_la_CFLAGS = \
+libayatana_appindicator_la_CFLAGS = \
 	$(LIBRARY_CFLAGS) \
 	$(COVERAGE_CFLAGS) \
 	-Wall -Werror -Wno-error=deprecated-declarations \
-	-DG_LOG_DOMAIN=\"libappindicator\"
+	-DG_LOG_DOMAIN=\"libayatana-appindicator\"
 
-libappindicator_la_LIBADD = \
+libayatana_appindicator_la_LIBADD = \
 	$(LIBRARY_LIBS)
 
 # We duplicate these here because Automake won't let us use $(VER) on the left hand side.
 # Since we carefully use $(VER) in the right hand side above, we can assign the same values.
 # Only one version of the library is every compiled at the same time, so it is safe to reuse
 # the right hand sides like this.
-libappindicator3includedir = $(libappindicatorincludedir)
-libappindicator3include_HEADERS = $(libappindicatorinclude_HEADERS)
-libappindicator3_la_SOURCES = $(libappindicator_la_SOURCES)
-libappindicator3_la_LDFLAGS = $(libappindicator_la_LDFLAGS)
-libappindicator3_la_CFLAGS = $(libappindicator_la_CFLAGS)
-libappindicator3_la_LIBADD = $(libappindicator_la_LIBADD)
+libayatana_appindicator3includedir = $(libayatana_appindicatorincludedir)
+libayatana_appindicator3include_HEADERS = $(libayatana_appindicatorinclude_HEADERS)
+libayatana_appindicator3_la_SOURCES = $(libayatana_appindicator_la_SOURCES)
+libayatana_appindicator3_la_LDFLAGS = $(libayatana_appindicator_la_LDFLAGS)
+libayatana_appindicator3_la_CFLAGS = $(libayatana_appindicator_la_CFLAGS)
+libayatana_appindicator3_la_LIBADD = $(libayatana_appindicator_la_LIBADD)
 
 ##################################
 # DBus Specs
@@ -135,14 +135,14 @@ INTROSPECTION_GIRS =
 if INTROSPECTION_TEN
 INTROSPECTION_SCANNER_ARGS = \
 	--add-include-path=$(srcdir) \
-	$(addprefix --c-include=$(libappindicatorincludefolder)/, $(libappindicator_headers)) \
+	$(addprefix --c-include=$(libayatana_appindicatorincludefolder)/, $(libayatana_appindicator_headers)) \
 	--symbol-prefix=app \
 	--identifier-prefix=App \
 	--warn-all
 else
 INTROSPECTION_SCANNER_ARGS = \
 	--add-include-path=$(srcdir) \
-	$(addprefix --c-include=$(libappindicatorincludefolder)/, $(libappindicator_headers))
+	$(addprefix --c-include=$(libayatana_appindicatorincludefolder)/, $(libayatana_appindicator_headers))
 endif
 
 INTROSPECTION_COMPILER_ARGS = --includedir=$(builddir)
@@ -151,31 +151,31 @@ if HAVE_INTROSPECTION
 
 introspection_sources = \
 	$(addprefix $(srcdir)/,app-indicator.c) \
-	$(addprefix $(srcdir)/,$(libappindicator_headers))
+	$(addprefix $(srcdir)/,$(libayatana_appindicator_headers))
 
-AppIndicator$(VER)-0.1.gir: libappindicator$(VER).la
+AyatanaAppIndicator$(VER)-0.1.gir: libayatana-appindicator$(VER).la
 
-AppIndicator_0_1_gir_INCLUDES = \
+AyatanaAppIndicator_0_1_gir_INCLUDES = \
     GObject-2.0 \
     $(GTKGIR)
-AppIndicator_0_1_gir_CFLAGS = $(LIBRARY_CFLAGS) -I$(srcdir) -I$(top_builddir)/src
-AppIndicator_0_1_gir_LIBS = libappindicator$(VER).la
-AppIndicator_0_1_gir_FILES = $(introspection_sources)
-# AppIndicator_0_1_gir_NAMESPACE = AppIndicator
+AyatanaAppIndicator_0_1_gir_CFLAGS = $(LIBRARY_CFLAGS) -I$(srcdir) -I$(top_builddir)/src
+AyatanaAppIndicator_0_1_gir_LIBS = libayatana-appindicator$(VER).la
+AyatanaAppIndicator_0_1_gir_FILES = $(introspection_sources)
+# AyatanaAppIndicator_0_1_gir_NAMESPACE = AyatanaAppIndicator
 
-AppIndicator3_0_1_gir_INCLUDES = $(AppIndicator_0_1_gir_INCLUDES)
-AppIndicator3_0_1_gir_CFLAGS = $(AppIndicator_0_1_gir_CFLAGS)
-AppIndicator3_0_1_gir_LIBS = $(AppIndicator_0_1_gir_LIBS)
-AppIndicator3_0_1_gir_FILES = $(AppIndicator_0_1_gir_FILES)
-# AppIndicator3_0_1_gir_NAMESPACE = AppIndicator
+AyatanaAppIndicator3_0_1_gir_INCLUDES = $(AyatanaAppIndicator_0_1_gir_INCLUDES)
+AyatanaAyatanaAppIndicator3_0_1_gir_CFLAGS = $(AyatanaAyatanaAppIndicator_0_1_gir_CFLAGS)
+AyatanaAppIndicator3_0_1_gir_LIBS = $(AyatanaAppIndicator_0_1_gir_LIBS)
+AyatanaAppIndicator3_0_1_gir_FILES = $(AyatanaAppIndicator_0_1_gir_FILES)
+# AyatanaAppIndicator3_0_1_gir_NAMESPACE = AyatanaAppIndicator
 
-INTROSPECTION_GIRS += AppIndicator$(VER)-0.1.gir
+INTROSPECTION_GIRS += AyatanaAppIndicator$(VER)-0.1.gir
 
-AppIndicator$(VER)-0.1.metadata: AppIndicator$(VER)-0.1.gir
+AyatanaAppIndicator$(VER)-0.1.metadata: AyatanaAppIndicator$(VER)-0.1.gir
 	cp -f $(srcdir)/$@.in $@
 
-BUILT_SOURCES += AppIndicator$(VER)-0.1.metadata
-CLEANFILES += AppIndicator$(VER)-0.1.metadata
+BUILT_SOURCES += AyatanaAppIndicator$(VER)-0.1.metadata
+CLEANFILES += AyatanaAppIndicator$(VER)-0.1.metadata
 
 girdir = $(datadir)/gir-1.0
 gir_DATA = $(INTROSPECTION_GIRS)
