--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,7 +16,7 @@ check_PROGRAMS = \
 	test-simple-app
 
 TESTS =
-DISTCLEANFILES = $(TESTS)
+DISTCLEANFILES = $(TESTS) Makefile.in
 
 EXTRA_DIST = \
 	run-xvfb.sh \
@@ -37,7 +37,7 @@ test_libappindicator_CFLAGS = \
 
 test_libappindicator_LDADD = \
 	$(TESTDEPS_LIBS) $(LIBRARY_LIBS) \
-	$(top_builddir)/src/libappindicator$(VER).la
+	$(top_builddir)/src/libayatana-appindicator$(VER).la
 
 #########################################
 ##  test-libappindicator-dbus-client
@@ -54,7 +54,7 @@ test_libappindicator_dbus_client_CFLAGS = \
 
 test_libappindicator_dbus_client_LDADD = \
 	$(TESTDEPS_LIBS) $(LIBRARY_LIBS) \
-	$(top_builddir)/src/libappindicator$(VER).la
+	$(top_builddir)/src/libayatana-appindicator$(VER).la
 
 #########################################
 ##  test-libappindicator-dbus-server
@@ -71,7 +71,7 @@ test_libappindicator_dbus_server_CFLAGS = \
 
 test_libappindicator_dbus_server_LDADD = \
 	$(TESTDEPS_LIBS) $(LIBRARY_LIBS) \
-	$(top_builddir)/src/libappindicator$(VER).la
+	$(top_builddir)/src/libayatana-appindicator$(VER).la
 
 #########################################
 ##  test-libappindicator-status-client
@@ -88,7 +88,7 @@ test_libappindicator_status_client_CFLAGS = \
 
 test_libappindicator_status_client_LDADD = \
 	$(TESTDEPS_LIBS) $(LIBRARY_LIBS) \
-	$(top_builddir)/src/libappindicator$(VER).la
+	$(top_builddir)/src/libayatana-appindicator$(VER).la
 
 #########################################
 ##  test-libappindicator-status-server
@@ -105,7 +105,7 @@ test_libappindicator_status_server_CFLAGS = \
 
 test_libappindicator_status_server_LDADD = \
 	$(TESTDEPS_LIBS) $(LIBRARY_LIBS) \
-	$(top_builddir)/src/libappindicator$(VER).la
+	$(top_builddir)/src/libayatana-appindicator$(VER).la
 
 #########################################
 ##  test-libappindicator-fallback
@@ -121,7 +121,7 @@ test_libappindicator_fallback_watcher_CFLAGS = \
 
 test_libappindicator_fallback_watcher_LDADD = \
 	$(TESTDEPS_LIBS) $(LIBRARY_LIBS) \
-	$(top_builddir)/src/libappindicator$(VER).la
+	$(top_builddir)/src/libayatana-appindicator$(VER).la
 
 test_libappindicator_fallback_item_SOURCES = \
 	test-libappindicator-fallback-item.c
@@ -133,7 +133,7 @@ test_libappindicator_fallback_item_CFLAGS = \
 
 test_libappindicator_fallback_item_LDADD = \
 	$(TESTDEPS_LIBS) $(LIBRARY_LIBS) \
-	$(top_builddir)/src/libappindicator$(VER).la
+	$(top_builddir)/src/libayatana-appindicator$(VER).la
 
 test-libappindicator-fallback: test-libappindicator-fallback-watcher test-libappindicator-fallback-item Makefile.am
 	@echo "#!/bin/bash" > $@
@@ -203,5 +203,5 @@ test_simple_app_CFLAGS = \
 
 test_simple_app_LDADD = \
 	$(TESTDEPS_LIBS) $(LIBRARY_LIBS) \
-	$(top_builddir)/src/libappindicator$(VER).la
+	$(top_builddir)/src/libayatana-appindicator$(VER).la
 
