--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
-Source: libappindicator
+Source: libayatana-appindicator
 Section: gnome
 Priority: optional
 XS-Python-Version: all
-Maintainer: Ubuntu Desktop Team <ubuntu-desktop@lists.ubuntu.com>
+Maintainer: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
 Build-Depends: debhelper (>= 9),
                dh-autoreconf,
                python-all-dev,
                at-spi2-core,
-               cli-common-dev (>= 0.5.7) [!arm64 !ppc64el],
+               cli-common-dev (>= 0.8~) [!arm64 !ppc64el],
                gobject-introspection,
                intltool,
                gtk-doc-tools,
@@ -24,139 +24,145 @@ Build-Depends: debhelper (>= 9),
                gtk-sharp2-gapi [!arm64 !ppc64el],
                libgtk2.0-cil-dev [!arm64 !ppc64el],
                libdbus-glib-1-dev (>= 0.82),
-               libindicator-dev (>= 0.3.90),
-               libindicator3-dev (>= 0.3.90),
+               libayatana-indicator-dev (>= 0.6.0),
+               libayatana-indicator3-dev (>= 0.6.0),
                libdbusmenu-glib-dev (>= 0.5.90),
                libdbusmenu-gtk-dev (>= 0.5.90),
                libdbusmenu-gtk3-dev (>= 0.5.90),
                libgirepository1.0-dev,
-Standards-Version: 3.9.1
-Homepage: https://launchpad.net/libappindicator
-# If you aren't a member of ~indicator-applet-developers but need to upload
-# packaging changes, just go ahead.  ~indicator-applet-developers will notice
-# and sync up the code again.
-Vcs-Bzr: https://code.launchpad.net/~indicator-applet-developers/libappindicator/trunk.13.04
-Vcs-Browser: https://bazaar.launchpad.net/~indicator-applet-developers/libappindicator/trunk.13.04/files
+Standards-Version: 3.9.6
+Homepage: https://github.com/ArcticaProject/libayatana-appindicator
+Vcs-Git: git://cgit.arctica-project.org/ayatana/libayatana-appindicator.git
+Vcs-Browser: https://cgit.arctica-project.org/ayatana/libayatana-appindicator.git/
 
-Package: python-appindicator
+Package: python-ayatana-appindicator
 Section: python
 Architecture: any
 XB-Python-Version: ${python:Versions}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${python:Depends},
-         libappindicator1 (= ${binary:Version}),
+         libayatana-appindicator1 (= ${binary:Version}),
          python-gobject,
 Provides: ${python:Provides},
-Description: Python bindings for libappindicator
- This package provides Python bindings so that you can use libappindicator from 
- a Python program.
-
-Package: libappindicator1
-Section: libs
-Architecture: any
-Pre-Depends: multiarch-support,
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-Recommends: indicator-application (>= 0.2.93),
-Description: Application Indicators
+Description: Python bindings for libayatana-appindicator (GTK2 version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains shared libraries to be used by applications.
+ This package provides Python bindings so that you can use
+ libayatana-appindicator from a Python program.
 
-Package: gir1.2-appindicator-0.1
+Package: libayatana-appindicator1
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+Recommends: ayatana-indicator-application (>= 0.2.93),
+Description: Ayatana Application Indicators (GTK2 version)
+ A library and indicator to take menus from applications and place them in
+ the panel.
+ .
+ This package contains shared libraries to be used by applications compiled
+ against GTK2.
+
+Package: gir1.2-ayatanaappindicator-0.1
 Section: introspection
 Architecture: any
 Depends: ${misc:Depends},
          ${gir:Depends},
-Description: Typelib files for libappindicator1.
+Description: Typelib files for libayatana-appindicator1 (GTK2 version).
+ A library and indicator to take menus from applications and place them in
+ the panel.
  .
  This package can be used by other packages using the GIRepository format
- to generate dynamic bindings.
+ to generate dynamic bindings (GTK2 version).
 
-Package: libappindicator-dev
+Package: libayatana-appindicator-dev
 Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-         gir1.2-appindicator-0.1 (= ${binary:Version}),
+         gir1.2-ayatanaappindicator-0.1 (= ${binary:Version}),
          libdbusmenu-glib-dev (>= 0.1.8),
          libdbus-glib-1-dev (>= 0.76),
-         libappindicator1 (= ${binary:Version}),
-Description: Application Indicators
+         libayatana-appindicator1 (= ${binary:Version}),
+Description: Ayatana Application Indicators (development files, GTK2 version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains files that are needed to build applications.
+ This package contains files that are needed to build applications (GTK2
+ version).
 
-Package: libappindicator-doc
+Package: libayatana-appindicator-doc
 Section: doc
 Architecture: all
 Depends: ${misc:Depends},
-Description:  Application Indicators
+Description:  Ayatana Application Indicators (documentation files, GTK2 version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains developer documentation.
+ This package contains developer documentation (GTK2 version).
 
-Package: libappindicator3-1
+Package: libayatana-appindicator3-1
 Section: libs
 Architecture: any
-Pre-Depends: multiarch-support,
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-Recommends: indicator-application (>= 0.2.93),
-Description: Application Indicators
+Recommends: ayatana-indicator-application (>= 0.2.93),
+Description: Ayatana Application Indicators (GTK3 version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains shared libraries to be used by applications.
+ This package contains shared libraries to be used by applications compiled
+ against GTK3.
 
-Package: libappindicator3-dev
+Package: libayatana-appindicator3-dev
 Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-         gir1.2-appindicator3-0.1 (= ${binary:Version}),
+         gir1.2-ayatanaappindicator3-0.1 (= ${binary:Version}),
          libdbusmenu-glib-dev (>= 0.1.8),
          libdbus-glib-1-dev (>= 0.76),
-         libappindicator3-1 (= ${binary:Version}),
-Description: Application Indicators
+         libayatana-appindicator3-1 (= ${binary:Version}),
+Description: Ayatana Application Indicators (development files, GTK3 version)
  A library and indicator to take menus from applications and place them in
  the panel.
  .
- This package contains files that are needed to build applications.
+ This package contains files that are needed to build applications (GTK3
+ version).
 
-Package: gir1.2-appindicator3-0.1
+Package: gir1.2-ayatanaappindicator3-0.1
 Section: introspection
 Architecture: any
 Depends: ${misc:Depends},
          ${gir:Depends},
-Description: Typelib files for libappindicator3-1.
+Description: Typelib files for libayatana-appindicator3-1 (GTK3 version)
+ A library and indicator to take menus from applications and place them in
+ the panel.
  .
  This package can be used by other packages using the GIRepository format
- to generate dynamic bindings.
+ to generate dynamic bindings (GTK3 version).
 
-Package: libappindicator0.1-cil
+Package: libayatana-appindicator0.1-cil
 Section: cli-mono
 Architecture: all
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${cli:Depends},
-Description: CLI bindings for libappindicator
+Description: CLI bindings for libayatana-appindicator
  This package provides the appindicator-sharp assembly that allows CLI (.NET)
  programs to take menus from applications and place them in the panel.
  .
  This package contains assemblies to be used by applications.
 
-Package: libappindicator0.1-cil-dev
-Section: libdevel
+Package: libayatana-appindicator0.1-cil-dev
+Section: cli-mono
 Architecture: all
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${cli:Depends},
-         libappindicator0.1-cil (= ${binary:Version}),
+         libayatana-appindicator0.1-cil (= ${binary:Version}),
 Description: Application Indicators
  A library and indicator to take menus from applications and place them in
  the panel.
