--- a/debian/rules
+++ b/debian/rules
@@ -60,17 +60,17 @@ override_dh_install:
 	find debian/tmp -name \*.la -exec rm {} \;
 	find debian/tmp -name \*.a -exec rm {} \;
 	rm -rf debian/tmp/*/usr/lib/mono
-	rm -rf debian/tmp/*/usr/share/vala/vapi/appindicator*-0.1.deps
-	dh_install -ppython-appindicator --fail-missing --sourcedir=debian/tmp/gtk2
-	dh_install -plibappindicator1 --fail-missing --sourcedir=debian/tmp/gtk2
-	dh_install -pgir1.2-appindicator-0.1 --fail-missing --sourcedir=debian/tmp/gtk2
-	dh_install -plibappindicator-dev --fail-missing --sourcedir=debian/tmp/gtk2
-	dh_install -plibappindicator-doc --fail-missing --sourcedir=debian/tmp/gtk2
-	dh_install -plibappindicator3-1 --fail-missing --sourcedir=debian/tmp/gtk3
-	dh_install -plibappindicator3-dev --fail-missing --sourcedir=debian/tmp/gtk3
-	dh_install -pgir1.2-appindicator3-0.1 --fail-missing --sourcedir=debian/tmp/gtk3
-	dh_install -plibappindicator0.1-cil --fail-missing --sourcedir=debian/tmp/gtk2
-	dh_install -plibappindicator0.1-cil-dev --fail-missing --sourcedir=debian/tmp/gtk2
+	rm -rf debian/tmp/*/usr/share/vala/vapi/ayatana-appindicator*-0.1.deps
+	dh_install -ppython-ayatana-appindicator --fail-missing --sourcedir=debian/tmp/gtk2
+	dh_install -plibayatana-appindicator1 --fail-missing --sourcedir=debian/tmp/gtk2
+	dh_install -pgir1.2-ayatanaappindicator-0.1 --fail-missing --sourcedir=debian/tmp/gtk2
+	dh_install -plibayatana-appindicator-dev --fail-missing --sourcedir=debian/tmp/gtk2
+	dh_install -plibayatana-appindicator-doc --fail-missing --sourcedir=debian/tmp/gtk2
+	dh_install -plibayatana-appindicator3-1 --fail-missing --sourcedir=debian/tmp/gtk3
+	dh_install -plibayatana-appindicator3-dev --fail-missing --sourcedir=debian/tmp/gtk3
+	dh_install -pgir1.2-ayatanaappindicator3-0.1 --fail-missing --sourcedir=debian/tmp/gtk3
+	dh_install -plibayatana-appindicator0.1-cil --fail-missing --sourcedir=debian/tmp/gtk2
+	dh_install -plibayatana-appindicator0.1-cil-dev --fail-missing --sourcedir=debian/tmp/gtk2
 
 override_dh_auto_test: $(FLAVORS:%=dotest-%)
 
@@ -90,4 +90,3 @@ dotestgtk2-%:
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -rf build
-
