debian/control: Fix build-dependency issue for nightly builds.

--- a/debian/control
+++ b/debian/control
@@ -24,8 +24,8 @@ Build-Depends: debhelper (>= 9),
                gtk-sharp2-gapi [!arm64 !ppc64el],
                libgtk2.0-cil-dev [!arm64 !ppc64el],
                libdbus-glib-1-dev (>= 0.82),
-               libayatana-indicator-dev (>= 0.6.0),
-               libayatana-indicator3-dev (>= 0.6.0),
+               libayatana-indicator-dev (>= 0.6.0~),
+               libayatana-indicator3-dev (>= 0.6.0~),
                libdbusmenu-glib-dev (>= 0.5.90),
                libdbusmenu-gtk-dev (>= 0.5.90),
                libdbusmenu-gtk3-dev (>= 0.5.90),
