--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,7 @@ Build-Depends: debhelper (>= 9),
                libgtk-3-dev (>= 2.91.3),
                libgtk2.0-dev (>= 2.12.0),
                python-gtk2-dev,
+               procps,
                gtk-sharp2-gapi [!arm64 !ppc64el],
                libgtk2.0-cil-dev [!arm64 !ppc64el],
                libdbus-glib-1-dev (>= 0.82),
