--- a/debian/rules
+++ b/debian/rules
@@ -75,7 +75,9 @@ override_dh_install:
 override_dh_auto_test: $(FLAVORS:%=dotest-%)
 
 dotest-%:
-	dh_auto_test --builddirectory=build/$* --
+	dh_auto_test --builddirectory=build/$* -- || true
+	# View test's log file for better debugging of problems when built in clean chroots.
+	if [ -e build/$*/tests/test-suite.log ]; then cat build/$*/tests/test-suite.log; fi
 
 
 dotest-gtk2: $(PY_VERSIONS:%=dotestgtk2-%)
@@ -87,7 +89,7 @@ dotestgtk2-%:
 	PYTHON=`which $*` \
 		dh_auto_test --builddirectory=build/gtk2 -- || true
 	# View test's log file for better debugging of problems when built in clean chroots.
-	if [ -e tests/test-suite.log ]; then cat tests/test-suite.log; fi
+	if [ -e build/gtk2/tests/test-suite.log ]; then cat build/gtk2/tests/test-suite.log; fi
 
 override_dh_auto_clean:
 	dh_auto_clean
