--- a/debian/rules
+++ b/debian/rules
@@ -76,7 +76,7 @@ override_dh_auto_test: $(FLAVORS:%=dotest-%)
 
 dotest-%:
 	mkdir -p `pwd`/debian/tmphome
-	HOME=`pwd`/debian/tmphome dh_auto_test dh_auto_test --builddirectory=build/$* -- || true
+	HOME=`pwd`/debian/tmphome PATH=/usr/bin:/bin:/usr/sbin:/sbin dh_auto_test dh_auto_test --builddirectory=build/$* -- || true
 	# View test's log file for better debugging of problems when built in clean chroots.
 	if [ -e build/$*/tests/test-suite.log ]; then cat build/$*/tests/test-suite.log; fi
 	rm -Rf `pwd`/debian/tmphome
@@ -88,7 +88,7 @@ dotest-gtk2: $(PY_VERSIONS:%=dotestgtk2-%)
 dotestgtk2-%:
 	mkdir -p `pwd`/debian/tmphome
 	PYTHON=`which $*` \
-		HOME=`pwd`/debian/tmphome dh_auto_test --builddirectory=build/gtk2 -- || true
+		HOME=`pwd`/debian/tmphome PATH=/usr/bin:/bin:/usr/sbin:/sbin dh_auto_test --builddirectory=build/gtk2 -- || true
 	# View test's log file for better debugging of problems when built in clean chroots.
 	if [ -e build/gtk2/tests/test-suite.log ]; then cat build/gtk2/tests/test-suite.log; fi
 	rm -Rf `pwd`/debian/tmphome
